--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,34 @@
+:root {
+    --heading-background-color :steelblue;/*nav and h1 same color always*/
+    --nav-a-color :white;/*for nav-a color and aside backgrond color*/
+    --main-img-width :150px;
+    --main-img-height :auto;
+    --main-img-border :1px solid steelblue;/*all main image*/
+    --main-img-box-shadow :0 0 30px gray;
+    --aside-width : 20rem;
+    --aside-margin : 1rem;
+    --aside-border : 1px solid rgb(0, 0, 0, 0.2);
+    --aside-color : #333;
+    --aside-text-aline : center;
+}
 nav {
-    background-color: steelblue;
+    background-color: var(--heading-background-color);
     padding: 10px;
 }
 nav a {
-    color: white;
+    color: var(--nav-a-color);
     display: block;
     padding: 20px;
 }
 h1 {
-    color: steelblue;
+    color: var(--heading-background-color);
 }
 main img {
-    width: 150px;
-    height: auto;
-    border: 1px solid steelblue;
+    width: var(--main-img-width);
+    height: var(--main-img-height);
+    border: var(--main-img-border);
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: var(--main-img-box-shadow);
 }
 p {
     padding: 0;
@@ -24,17 +37,17 @@ main {
     max-width: 840px;
 }
 aside {
-width: 20rem;
-margin: 1rem;
-border: 1px solid rgba(0, 0, 0, 0.2);
+width: var(--aside-width);
+margin: var(--aside-margin);
+border: var(--aside-border);
 padding: 1rem;
-background-color: #eee;
-color: #333;
-text-align: center;
+background-color: var(--nav-a-color);
+color: var(--aside-color);
+text-align: var(--aside-text-aline);
 }
 aside img {
     width: 200px;
-    height: auto;
+    height: var(--main-img-height);
 }
 footer {
     margin-top: 15px;
