--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,11 @@
     --aside-border: 1px solid rgb(0, 0, 0, 0.2);
     --aside-color: #333;
     --aside-text-aline: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 }
 nav {
     background-color: var(--heading-background-color);
@@ -29,6 +34,7 @@ main img {
     border: var(--main-img-border);
     padding: 2px;
     box-shadow: var(--main-img-box-shadow);
+    float: right; /* last update 1-10-2024*/
 }
 p {
     padding: 0;
@@ -49,8 +55,22 @@ aside img {
     width: 200px;
     height: var(--main-img-height);
 }
+/*new update 1-10-2024*/
+aside h2 {
+    position: relative;
+    top: 40px;
+    left: 10px;
+}
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+/* Class Selectors*/
+.box {
+    margin: var(--aside-margin);
+    border: var(--aside-border);
+    padding: 1rem;
+    background-color: var(--nav-a-color);
+    color: var(--aside-color);
 }
