--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,7 @@ aside img {
 }
 /*new update 1-10-2024*/
 aside h2 {
-    position: absolute;
+    position: relative;
     top: 40px;
     left: 10px;
 }
