--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
     --aside-border: 1px solid rgb(0, 0, 0, 0.2);
     --aside-color: #333;
     --aside-text-aline: center;
+}
 * {
     margin: 0;
     padding: 0;
