--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap")
+
 :root {
     --heading-background-color: #5efc8d;
     --nav-color: #ebe3e2;
@@ -53,4 +55,9 @@ article {
     right: 60px;
     background-color: rgba(184, 211, 148, 0.5);
     padding: 10px;
+}
+
+.hero article img {
+    float: right;
+    width: 200px;
 }
