--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -13,25 +13,30 @@
     margin: 0;
     padding: 0;
 }
-nav {
-    background-color: var(--nav-color);
-    padding: 10px;
+.navigation {
+    background-color: rgb(14, 13, 36);
+    padding: 30px;
 }
-div {
-    background-color: var(--main-color);
+.navigation a{
+    color: white;
+    display: block;
+    font-size: 2rem;
+    font-weight: 100;
+}
+.navigation a:hover {
+    color: #073b07;
+    text-decoration: underline;
 }
 h1 {
-    color: var(--heading-background-color);
-}
-article {
-    color: var(--text-color);
-    position: ;
+    color: rgb(255, 254, 254);
+    font-size: 3.5rem;
 }
 h2 {
-    color: var(--heading-background-color);
+    text-align: center;
 }
 section {
-    color: var(--text-color);
+    font-size: medium;
+    background-color: #eceef7;
 }
 .hero {
     position: relative;
@@ -44,20 +49,129 @@ section {
 .hero h1 {
     position: absolute;
     top: 30px;
-    left: 300px;
-    background-color: rgb(136, 136, 74);
+    left: 5.5rem;
     padding: 6px;
+    text-align: center;
 }
 article {
     position: absolute;
-    top: 80px;
+    top: 7rem;
     left: 60px;
     right: 60px;
-    background-color: rgba(184, 211, 148, 0.5);
+    background-color: rgba(184, 211, 148, 0.3);
     padding: 10px;
 }
 
 .hero article img {
     float: right;
     width: 200px;
+}
+.footer {
+    background-color: rgb(14, 13, 36);
+}
+.footer p {
+    position: relative;/*updated feature12/10/2024*/
+    top: 3.5rem;
+    color: white;
+    text-align: center;
+    
+}
+/*updated feature 10,11,12/10/2024*/
+header {
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+    align-items: center;
+}
+.logo {
+    margin: 0 0.25rem 0 1rem;
+    width: 120px;
+    height: auto;
+    box-shadow: 0 0 5rem rgb(0, 0, 0);
+}
+nav {
+    text-align: ;
+}
+.navigation {
+    display: flex;
+    list-style: none;
+}
+.navigation a {
+    flex: 1 1 100%;
+    justify-content: flex-end;
+}
+.navigation a {
+    display: block;
+    padding: 20px;
+}
+.middle {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    padding: 2px;
+}
+.middle h2 {
+    grid-column: 1 / -1;
+    z-index: 1;
+
+}
+.middle p, .middle .p2 {
+    text-align: justify;
+}
+.middle p {
+    grid-column: 1 / 2;
+    align-self: center;
+}
+.middle .p2 {
+    grid-column: 3 / 4;
+    align-self: center;
+}
+.middle img {
+    grid-column: 2 / 3;
+    justify-self: center;
+    width: 250;
+    height: auto;
+    margin: 10px;
+}
+.adventure {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+}
+.adventure h2{
+    grid-column: 1 / -1;
+}
+.adventure image {
+    grid-column: 1 / 2;
+}
+.adventure .image2 {
+    grid-column: 2 / 3;
+}
+.adventure .image3 {
+    grid-column: 3 / 4;
+    padding: 2px;
+}
+.adventure .image4 {
+    grid-column: 4 / 5;
+}
+.adventure .image5 {
+    grid-column: 5 / 6;
+}
+.adventure figure {
+    border: 2px;
+    margin: 2px;
+}
+.adventure figcaption {
+    background-color: rgb(14, 13, 36);
+    color: white;
+}
+.adventure img {
+    box-shadow: 0 0 3rem rgb(8, 7, 36);
+}
+.sociallinks {
+    display: flex;
+    justify-content: flex-end;
+}
+.sociallinks a {
+    margin-left: 10px;
 }
