--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,13 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap")
 
-:root {
-    --heading-background-color: #5efc8d;
-    --nav-color: #ebe3e2;
-    --main-color: #ffff;
-    --text-color: #2f007e;
-
-
-}
 * {
     text-decoration: none;
     margin: 0;
@@ -48,7 +40,7 @@ section {
 }
 .hero h1 {
     position: absolute;
-    top: 30px;
+    top: 5px;
     left: 5.5rem;
     padding: 6px;
     text-align: center;
@@ -89,9 +81,6 @@ header {
     height: auto;
     box-shadow: 0 0 5rem rgb(0, 0, 0);
 }
-nav {
-    text-align: ;
-}
 .navigation {
     display: flex;
     list-style: none;
@@ -129,7 +118,7 @@ nav {
 .middle img {
     grid-column: 2 / 3;
     justify-self: center;
-    width: 250;
+    width: 250px;
     height: auto;
     margin: 10px;
 }
