--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,16 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap")
-
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+:root {
+    --nav-color: white;
+    --nav-background-color: rgb(14, 13, 36);
+    --main-color: #eceef7;;
+}
 * {
     text-decoration: none;
     margin: 0;
     padding: 0;
 }
 .navigation {
-    background-color: rgb(14, 13, 36);
+    background-color: var(--nav-background-color);
     padding: 30px;
 }
 .navigation a{
-    color: white;
+    color: var(--nav-color);
     display: block;
     font-size: 2rem;
     font-weight: 100;
@@ -20,7 +24,7 @@
     text-decoration: underline;
 }
 h1 {
-    color: rgb(255, 254, 254);
+    color: var(--nav-color);
     font-size: 3.5rem;
 }
 h2 {
@@ -28,7 +32,7 @@ h2 {
 }
 section {
     font-size: medium;
-    background-color: #eceef7;
+    background-color: var(--main-color);
 }
 .hero {
     position: relative;
@@ -59,12 +63,12 @@ article {
     width: 200px;
 }
 .footer {
-    background-color: rgb(14, 13, 36);
+    background-color: var(--nav-background-color);
 }
 .footer p {
     position: relative;/*updated feature12/10/2024*/
     top: 3.5rem;
-    color: white;
+    color: var(--nav-color);
     text-align: center;
     
 }
