--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -20,7 +20,7 @@ h1 {
     text-align: center;
 }
 form {
-    width: 700;
+    width: 600;
     margin: 0 auto;
     padding: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.01);
@@ -59,11 +59,12 @@ input[type="checkbox"] {
 button {
     margin: 1rem;
     background-color: rgb(30, 80, 1);
-    color: #fff;
+    color: #ffffff;
     border: none;
     border-radius: .5rem;
     padding: 0.5rem;
     font-size: 1.3rem;
+    width: 60%;
 }
 button:hover {
     background-color: rgb(35, 245, 16);
