--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -2,7 +2,7 @@
 :root {
     --nav-color: white;
     --nav-background-color: rgb(14, 13, 36);
-    --main-color: #eceef7;;
+    --main-color: #eceef7;
 }
 * {
     margin: 0;
@@ -56,8 +56,10 @@ article {
     top: 7rem;
     left: 60px;
     right: 60px;
-    background-color: rgba(184, 211, 148, 0.3);
+    background-color: rgba(184, 211, 148, 0.4);
     padding: 10px;
+    font-size: 1.3rem;
+    font-weight: 300;
 }
 
 .hero article img {
@@ -103,7 +105,8 @@ header {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
-    padding: 2px;
+    padding: 3rem;
+    border-bottom: 1rem solid rgb(14, 13, 36);
 }
 .middle h2 {
     grid-column: 1 / -1;
