--- a/wwr/styles/trips.css
+++ b/wwr/styles/trips.css
@@ -113,7 +113,7 @@ caption {
 }
 thead {
     background-color: rgb(228, 240, 245);
-    font-size: 1.2;
+    font-size: 1.2rem;
     font-weight: 600;
 }
 td, th {
